ft: Admin can delete meal from a Category
